<resources>
    <string name="app_name">PG4600 Pokemon</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register_code">Register a pokémon</string>
    <string name="pokemonIdDescription">Hold your phone near the NFC tag, or enter the ID manually</string>
    <string name="errorDescription">That is not a Pokemon!</string>
    <string name="submit">Register</string>
    <string name="pokemonIdHint">Enter the pokemon ID</string>
    <string name="title_activity_pokemon_map">Pokemon catcher</string>
    <string name="cancelBtn">Cancel</string>
    <string name="nfc_tag">NFC Tag</string>
    <string name="capturedPokemonsLabel">Captured Pokémons</string>
    <string name="pokemon_image_description">Pokemon image</string>
    <string name="title_activity_list">Captured pokemons</string>
</resources>
