<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="no.westerdals.pokemon.activities.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokemonIdDescription"
        android:id="@+id/pokemonIdDescription"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingRight="25dp"
        android:paddingLeft="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputPokemonId"
        android:hint="@string/pokemonIdHint"
        android:textSize="25sp"
        android:layout_above="@+id/buttonCheckAndSubmit"
        android:layout_alignRight="@+id/buttonCheckAndSubmit"
        android:layout_alignEnd="@+id/buttonCheckAndSubmit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/buttonCheckAndSubmit"
        android:textSize="20sp"
        android:height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/ic_nfc_black_48px"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:contentDescription="@string/nfc_tag"
        android:layout_below="@+id/pokemonIdDescription"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/errorDescription"
        android:maxHeight="150dp"
        android:maxWidth="150dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/errorDescription"
        android:id="@+id/errorDescription"
        android:textSize="20sp"
        android:layout_above="@id/inputPokemonId"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:textColor="@color/design_textinput_error_color_light" />
</RelativeLayout>
